--- a/WasteEfficent/package.json
+++ b/WasteEfficent/package.json
@@ -23,6 +23,7 @@
     "native-base": "^2.13.8",
     "react": "16.8.3",
     "react-dom": "16.8.3",
+    "react-google-places-suggest": "^3.9.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-web": "^0.11.7",
